--- a/src/server/views/index.pug
+++ b/src/server/views/index.pug
@@ -12,6 +12,8 @@ html
     meta(name="msapplication-TileColor" content="#ffffff")
     meta(name="msapplication-TileImage" content="/icons/ms-icon-144x144.png")
     meta(name="theme-color" content="#ffffff")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto:300,400,500")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", type="text/css", href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800")
     link(rel="stylesheet", type="text/css", href="https://fonts.googleapis.com/css?family=Lato:400,700,800")
     link(rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png")
